--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Block World Unblocked</title>
+    <link rel="canonical" href="https://ubg44.github.io/BlockWorld/" />
+    <script>
+        window.location= "https://ubg44.github.io/BlockWorld/";
+    </script>
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
